@@ -1,5 +1,10 @@
 2014-12-11  Mark Wielaard  <mjw@redhat.com>
 
+	* readelf.c (print_debug_exception_table): Check TType base offset
+	and Action table are sane.
+
+2014-12-11  Mark Wielaard  <mjw@redhat.com>
+
 	* readelf.c (print_debug_frame_section): Check number of augmentation
 	chars to print.
 
